--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.4.0",
+    "@heroicons/react": "^1.0.3",
     "@types/react": "17.0.15",
+    "autoprefixer": "^10.3.1",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.7",
     "typescript": "4.3.5"
   }
 }
