--- a/.github/workflows/gh-pages.deploy.yml
+++ b/.github/workflows/gh-pages.deploy.yml
@@ -19,12 +19,13 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          cache: "yarn"
       - name: Install packages
-        run: npm ci
+        run: yarn install
       - name: Build project
-        run: npm run build
+        run: yarn build
       - name: Export static files
-        run: npm run export
+        run: yarn export
       - name: Add .nojekyll file
         run: touch ./out/.nojekyll
       - name: Deploy
