--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@typeform/embed-react": "^1.0.7",
     "fuse.js": "^6.4.6",
     "next": "11.0.1",
     "react": "17.0.2",
