--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "export": "next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
   "dependencies": {
     "@typeform/embed-react": "^1.0.7",
@@ -22,10 +23,14 @@
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
     "@types/react": "17.0.15",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "autoprefixer": "^10.3.1",
-    "eslint": "7.31.0",
+    "eslint": "^8.16.0",
     "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.3.6",
+    "prettier": "^2.6.2",
     "tailwindcss": "^2.2.7",
     "typescript": "4.3.5"
   }
