--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@typeform/embed-react": "^1.0.7",
     "fuse.js": "^6.4.6",
-    "next": "^11.1.2",
+    "next": "^11.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -26,7 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "autoprefixer": "^10.3.1",
-    "eslint": "^8.16.0",
+    "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.3.6",
