--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@typeform/embed-react": "^1.0.7",
     "fuse.js": "^6.4.6",
     "next": "^11.1.3",
+    "next-plausible": "^3.1.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
