--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.3.6",
     "prettier": "^2.6.2",
-    "tailwindcss": "^2.2.7",
+    "tailwindcss": "2.2.16",
     "typescript": "4.3.5"
   }
 }
